# axum_tutorial

./: Cargo.toml
src/: error.rs  main.rs  model.rs
src/web/: mod.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
