[package]
name = "rust_axum_tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1.0"
tower-cookies = "0.10.0"

[dev-dependencies]
httpc-test = "0.1.1"
anyhow = "1.0"